// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FilterLayout > applies correct icon classes 1`] = `
<div
  class="mx-auto w-full flex flex-col gap-2"
  data-slot="filter-list"
  data-testid="filter-list"
>
  <p
    class="cursor-pointer flex gap-2 items-center text-base font-medium transition-colors text-foreground"
    data-selected="true"
    data-slot="filter-item"
    data-testid="filter-item"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-columns3 lucide-columns-3 w-5 h-5"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <rect
        height="18"
        rx="2"
        width="18"
        x="3"
        y="3"
      />
      <path
        d="M9 3v18"
      />
      <path
        d="M15 3v18"
      />
    </svg>
    <span
      class=""
    >
      Columns
    </span>
  </p>
  <p
    class="cursor-pointer flex gap-2 items-center text-base font-medium transition-colors text-muted-foreground hover:text-foreground/80"
    data-selected="false"
    data-slot="filter-item"
    data-testid="filter-item"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-menu w-5 h-5"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M4 12h16"
      />
      <path
        d="M4 18h16"
      />
      <path
        d="M4 6h16"
      />
    </svg>
    <span
      class=""
    >
      Wide
    </span>
  </p>
  <p
    class="flex gap-2 items-center text-base font-medium transition-colors text-muted-foreground hover:text-foreground/80 opacity-20 cursor-default"
    data-selected="false"
    data-slot="filter-item"
    data-testid="filter-item"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-layout-grid w-5 h-5"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <rect
        height="7"
        rx="1"
        width="7"
        x="3"
        y="3"
      />
      <rect
        height="7"
        rx="1"
        width="7"
        x="14"
        y="3"
      />
      <rect
        height="7"
        rx="1"
        width="7"
        x="14"
        y="14"
      />
      <rect
        height="7"
        rx="1"
        width="7"
        x="3"
        y="14"
      />
    </svg>
    <span
      class=""
    >
      Visual
    </span>
  </p>
</div>
`;

exports[`FilterLayout > applies correct styling classes 1`] = `
<p
  class="cursor-pointer flex gap-2 items-center text-base font-medium transition-colors text-foreground"
  data-selected="true"
  data-slot="filter-item"
  data-testid="filter-item"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-columns3 lucide-columns-3 w-5 h-5"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <rect
      height="18"
      rx="2"
      width="18"
      x="3"
      y="3"
    />
    <path
      d="M9 3v18"
    />
    <path
      d="M15 3v18"
    />
  </svg>
  <span
    class=""
  >
    Columns
  </span>
</p>
`;

exports[`FilterLayout > applies correct styling classes 2`] = `
<p
  class="cursor-pointer flex gap-2 items-center text-base font-medium transition-colors text-muted-foreground hover:text-foreground/80"
  data-selected="false"
  data-slot="filter-item"
  data-testid="filter-item"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-menu w-5 h-5"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M4 12h16"
    />
    <path
      d="M4 18h16"
    />
    <path
      d="M4 6h16"
    />
  </svg>
  <span
    class=""
  >
    Wide
  </span>
</p>
`;

exports[`FilterLayout > renders with correct icons 1`] = `
<div
  class="mx-auto w-full flex flex-col gap-2"
  data-slot="filter-list"
  data-testid="filter-list"
>
  <p
    class="cursor-pointer flex gap-2 items-center text-base font-medium transition-colors text-foreground"
    data-selected="true"
    data-slot="filter-item"
    data-testid="filter-item"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-columns3 lucide-columns-3 w-5 h-5"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <rect
        height="18"
        rx="2"
        width="18"
        x="3"
        y="3"
      />
      <path
        d="M9 3v18"
      />
      <path
        d="M15 3v18"
      />
    </svg>
    <span
      class=""
    >
      Columns
    </span>
  </p>
  <p
    class="cursor-pointer flex gap-2 items-center text-base font-medium transition-colors text-muted-foreground hover:text-foreground/80"
    data-selected="false"
    data-slot="filter-item"
    data-testid="filter-item"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-menu w-5 h-5"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M4 12h16"
      />
      <path
        d="M4 18h16"
      />
      <path
        d="M4 6h16"
      />
    </svg>
    <span
      class=""
    >
      Wide
    </span>
  </p>
  <p
    class="flex gap-2 items-center text-base font-medium transition-colors text-muted-foreground hover:text-foreground/80 opacity-20 cursor-default"
    data-selected="false"
    data-slot="filter-item"
    data-testid="filter-item"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-layout-grid w-5 h-5"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <rect
        height="7"
        rx="1"
        width="7"
        x="3"
        y="3"
      />
      <rect
        height="7"
        rx="1"
        width="7"
        x="14"
        y="3"
      />
      <rect
        height="7"
        rx="1"
        width="7"
        x="14"
        y="14"
      />
      <rect
        height="7"
        rx="1"
        width="7"
        x="3"
        y="14"
      />
    </svg>
    <span
      class=""
    >
      Visual
    </span>
  </p>
</div>
`;

exports[`FilterLayout > renders with custom selected tab 1`] = `
<p
  class="cursor-pointer flex gap-2 items-center text-base font-medium transition-colors text-foreground"
  data-selected="true"
  data-slot="filter-item"
  data-testid="filter-item"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-menu w-5 h-5"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M4 12h16"
    />
    <path
      d="M4 18h16"
    />
    <path
      d="M4 6h16"
    />
  </svg>
  <span
    class=""
  >
    Wide
  </span>
</p>
`;

exports[`FilterLayout > renders with default selected tab 1`] = `
<div
  class="mx-auto w-full flex flex-col gap-4 bg-background"
  data-slot="filter-root"
  data-testid="filter-root"
>
  <div
    data-slot="filter-header"
    data-testid="filter-header"
  >
    <h2
      class="text-2xl text-muted-foreground font-light"
      data-testid="heading-2"
    >
      Layout
    </h2>
  </div>
  <div
    class="mx-auto w-full flex flex-col gap-2"
    data-slot="filter-list"
    data-testid="filter-list"
  >
    <p
      class="cursor-pointer flex gap-2 items-center text-base font-medium transition-colors text-foreground"
      data-selected="true"
      data-slot="filter-item"
      data-testid="filter-item"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-columns3 lucide-columns-3 w-5 h-5"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <rect
          height="18"
          rx="2"
          width="18"
          x="3"
          y="3"
        />
        <path
          d="M9 3v18"
        />
        <path
          d="M15 3v18"
        />
      </svg>
      <span
        class=""
      >
        Columns
      </span>
    </p>
    <p
      class="cursor-pointer flex gap-2 items-center text-base font-medium transition-colors text-muted-foreground hover:text-foreground/80"
      data-selected="false"
      data-slot="filter-item"
      data-testid="filter-item"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-menu w-5 h-5"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M4 12h16"
        />
        <path
          d="M4 18h16"
        />
        <path
          d="M4 6h16"
        />
      </svg>
      <span
        class=""
      >
        Wide
      </span>
    </p>
    <p
      class="flex gap-2 items-center text-base font-medium transition-colors text-muted-foreground hover:text-foreground/80 opacity-20 cursor-default"
      data-selected="false"
      data-slot="filter-item"
      data-testid="filter-item"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-layout-grid w-5 h-5"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <rect
          height="7"
          rx="1"
          width="7"
          x="3"
          y="3"
        />
        <rect
          height="7"
          rx="1"
          width="7"
          x="14"
          y="3"
        />
        <rect
          height="7"
          rx="1"
          width="7"
          x="14"
          y="14"
        />
        <rect
          height="7"
          rx="1"
          width="7"
          x="3"
          y="14"
        />
      </svg>
      <span
        class=""
      >
        Visual
      </span>
    </p>
  </div>
</div>
`;

exports[`FilterLayout > rerenders with different selected tabs 1`] = `
<p
  class="cursor-pointer flex gap-2 items-center text-base font-medium transition-colors text-foreground"
  data-selected="true"
  data-slot="filter-item"
  data-testid="filter-item"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-columns3 lucide-columns-3 w-5 h-5"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <rect
      height="18"
      rx="2"
      width="18"
      x="3"
      y="3"
    />
    <path
      d="M9 3v18"
    />
    <path
      d="M15 3v18"
    />
  </svg>
  <span
    class=""
  >
    Columns
  </span>
</p>
`;

exports[`FilterLayout > rerenders with different selected tabs 2`] = `
<p
  class="cursor-pointer flex gap-2 items-center text-base font-medium transition-colors text-muted-foreground hover:text-foreground/80"
  data-selected="false"
  data-slot="filter-item"
  data-testid="filter-item"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-menu w-5 h-5"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M4 12h16"
    />
    <path
      d="M4 18h16"
    />
    <path
      d="M4 6h16"
    />
  </svg>
  <span
    class=""
  >
    Wide
  </span>
</p>
`;

exports[`FilterLayout > rerenders with different selected tabs 3`] = `
<p
  class="cursor-pointer flex gap-2 items-center text-base font-medium transition-colors text-muted-foreground hover:text-foreground/80"
  data-selected="false"
  data-slot="filter-item"
  data-testid="filter-item"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-columns3 lucide-columns-3 w-5 h-5"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <rect
      height="18"
      rx="2"
      width="18"
      x="3"
      y="3"
    />
    <path
      d="M9 3v18"
    />
    <path
      d="M15 3v18"
    />
  </svg>
  <span
    class=""
  >
    Columns
  </span>
</p>
`;

exports[`FilterLayout > rerenders with different selected tabs 4`] = `
<p
  class="flex gap-2 items-center text-base font-medium transition-colors text-foreground opacity-20 cursor-default"
  data-selected="true"
  data-slot="filter-item"
  data-testid="filter-item"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-layout-grid w-5 h-5"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <rect
      height="7"
      rx="1"
      width="7"
      x="3"
      y="3"
    />
    <rect
      height="7"
      rx="1"
      width="7"
      x="14"
      y="3"
    />
    <rect
      height="7"
      rx="1"
      width="7"
      x="14"
      y="14"
    />
    <rect
      height="7"
      rx="1"
      width="7"
      x="3"
      y="14"
    />
  </svg>
  <span
    class=""
  >
    Visual
  </span>
</p>
`;

exports[`FilterLayout > shows correct visual state for selected and unselected tabs 1`] = `
<p
  class="cursor-pointer flex gap-2 items-center text-base font-medium transition-colors text-foreground"
  data-selected="true"
  data-slot="filter-item"
  data-testid="filter-item"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-columns3 lucide-columns-3 w-5 h-5"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <rect
      height="18"
      rx="2"
      width="18"
      x="3"
      y="3"
    />
    <path
      d="M9 3v18"
    />
    <path
      d="M15 3v18"
    />
  </svg>
  <span
    class=""
  >
    Columns
  </span>
</p>
`;

exports[`FilterLayout > shows correct visual state for selected and unselected tabs 2`] = `
<p
  class="cursor-pointer flex gap-2 items-center text-base font-medium transition-colors text-muted-foreground hover:text-foreground/80"
  data-selected="false"
  data-slot="filter-item"
  data-testid="filter-item"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-menu w-5 h-5"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M4 12h16"
    />
    <path
      d="M4 18h16"
    />
    <path
      d="M4 6h16"
    />
  </svg>
  <span
    class=""
  >
    Wide
  </span>
</p>
`;
